--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,13 +1,22 @@
+anyio==3.6.2
+click==8.1.3
+colorama==0.4.6
 contourpy==1.0.5
 cycler==0.11.0
 fonttools==4.37.4
+h11==0.14.0
+idna==3.4
 kiwisolver==1.4.4
 matplotlib==3.6.0
 numpy==1.23.3
 packaging==21.3
 pandas==1.5.0
 Pillow==9.2.0
+pydantic==1.10.8
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.4
 six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.6.1
